# chatserv

./: .gitignore  Cargo.toml  LICENSE
libchatserv/: Cargo.toml
libchatserv/src/: lib.rs
libchatserv/src/bot/: ChatBot.rs  mod.rs
libchatserv/src/fmt/: ChatFmt.rs  FidoFmt.rs  mod.rs
libchatserv/src/util/: NatCfg.rs  mod.rs
twitch-serv/: .gitignore  Cargo.toml
twitch-serv/src/: TwitchBot.rs  main.rs
twitch-serv/src/TwitchBot/: mod.rs
twitch-serv/src/twitch/: IrcCfg.rs  MessageEvents.rs  TwitchBot.rs  mod.rs
twitch-serv/tutil/: IrcCfg.rs  mod.rs
