[package]
name = "twitch-serv"
version = "0.1.0"
authors = ["Anthony Anderson <anderson@mdhs.info>"]
workspace = "../"

[dependencies]
tungstenite = "0.5.3"
mio = "0.6.14"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
serde_yaml = "0.7"
libchatserv = { path = "../libchatserv"}
url = "1.5.1"
ttfmt = { git = "https://github.com/TASToys/ttfmt.git" }
regex = "0.2.10"

[build]
target-dir = "../build"